--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
             <nav class="navigation hide" id="navigation">
                 <span class="close-icon" id="close-icon" onclick="showIconBar()"><i class="fa fa-close"></i></span>
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="forums.html">Форумы</a></li>
+                    <li class="nav-item"><a href="https://theyucco.github.io/Home/">Форумы</a></li>
                     <li class="nav-item"><a href="https://theyucco.github.io/Psts/">Посты</a></li>
                     <li class="nav-item"><a href="https://theyucco.github.io/details/">Подробности</a></li>
                 </ul>
